--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "AI Summarizer",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Summarize web content using LLM web UIs in the sidebar.",
   "browser_specific_settings": {
     "gecko": {
@@ -18,17 +18,27 @@
     "<all_urls>"
   ],
   "background": {
-    "scripts": ["providers/providers.js", "lib/prompt-builder.js", "background.js"]
+    "scripts": [
+      "providers/providers.js",
+      "lib/prompt-builder.js",
+      "background.js"
+    ]
   },
   "browser_action": {
-    "default_icon": { "48": "icons/icon-48.png", "96": "icons/icon-96.png" },
+    "default_icon": {
+      "48": "icons/icon-48.png",
+      "96": "icons/icon-96.png"
+    },
     "default_popup": "popup/popup.html",
     "default_title": "AI Summarizer"
   },
   "sidebar_action": {
     "default_title": "AI Summarizer",
     "default_panel": "sidebar/sidebar.html",
-    "default_icon": { "48": "icons/icon-48.png", "96": "icons/icon-96.png" }
+    "default_icon": {
+      "48": "icons/icon-48.png",
+      "96": "icons/icon-96.png"
+    }
   },
   "options_ui": {
     "page": "settings/settings.html",
@@ -36,15 +46,27 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://chat.openai.com/*", "*://chatgpt.com/*"],
-      "js": ["content/injector.js"],
+      "matches": [
+        "*://chat.openai.com/*",
+        "*://chatgpt.com/*"
+      ],
+      "js": [
+        "content/injector.js"
+      ],
       "run_at": "document_idle"
     },
     {
-      "matches": ["*://claude.ai/*"],
-      "js": ["content/injector.js"],
+      "matches": [
+        "*://claude.ai/*"
+      ],
+      "js": [
+        "content/injector.js"
+      ],
       "run_at": "document_idle"
     }
   ],
-  "icons": { "48": "icons/icon-48.png", "96": "icons/icon-96.png" }
+  "icons": {
+    "48": "icons/icon-48.png",
+    "96": "icons/icon-96.png"
+  }
 }
